# WalkFree

./: .gitignore  Info.plist  LICENSE  Package.swift  README.md  xtool.yml
Sources/WalkFree/: WalkFreeApp.swift
Sources/WalkFree/Models/: City.swift  Coordinate.swift  Segment.swift  Street.swift
Sources/WalkFree/Services/: CompletionService.swift  DataService.swift  LocationService.swift
Sources/WalkFree/Utilities/: JSONParser.swift
Sources/WalkFree/ViewModels/: ContentViewModel.swift
Sources/WalkFree/Views/: CitySelectionView.swift  ContentView.swift  MapView.swift
Sources/WalkFree/Views/Components/: CitySelectorButton.swift  CountyPickerView.swift  EmptyStateView.swift  LoadingOverlay.swift  MapAnnotationManager.swift  MapCoordinator.swift  MapOverlayManager.swift  MapRegionManager.swift  ProgressHeaderView.swift  ScrollToTopButton.swift  SearchBarView.swift  StreetListView.swift  StreetRowView.swift  TabPickerView.swift  ViewSwitcherBar.swift
scraper/: main.py  pyproject.toml
scraper/.build/: workspace-state.json
scraper/areas/: nyc.geojson
scraper/parser/: __init__.py  nyc.py
